--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Evento</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="api_key"></string>
+    <string name="api_key">"YOUR API KEY"</string>
 </resources>
